# AirISP

./: .gitignore  AirISP.sln  README.md  exitcode.txt
.github/workflows/: build.yml  release.yml
AirISP/: AirISP.csproj  BasicOperation.cs  BuilderParameter.cs  ColorfulConsole.cs  EraseFlash.cs  Get.cs  Program.cs  ReadFlash.cs  ReadProtect.cs  ReadUnprotect.cs  Tool.cs  WriteFlash.cs
AirISP/Properties/: launchSettings.json
tools/rst2boot/: Cargo.toml
tools/rst2boot/src/: main.rs
