[package]
name = "rst2boot"
version = "0.1.0"
authors = ["chenxuuu <lolicon@papapoi.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

# ~/.cargo/config
# [target.x86_64-pc-windows-msvc]
# rustflags = ["-C", "target-feature=+crt-static"]
